// first of all the buildscript block, then the plugins block
buildscript {
    repositories {
        google()
        mavenCentral()
    }
    dependencies {
        // Android Gradle Plugin
        classpath 'com.android.tools.build:gradle:9.0.0'
    }
}

plugins {
    id 'com.android.library'
    id 'checkstyle'
}

android {
    namespace 'openwig'
    compileSdk 36


    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    defaultConfig {
        minSdk 26
    }

    sourceSets.main {
        manifest.srcFile 'AndroidManifest.xml'
        // include both the module's own sources and the OpenWIGLibrary sources
        java.srcDirs = ['OpenWIGLibrary/src']
        res.srcDirs = ['res']
    }

    lint {
        // generally we accept lint errors when building
        abortOnError false

        // abort release builds in case of FATAL errors
        checkReleaseBuilds true
        targetSdk 36
    }
// Checkstyle configuration
    checkstyle {
        toolVersion = '10.26.1'
        configFile = file('checkstyle.xml')
    }

    tasks.register('checkstyle', Checkstyle) {
        group = 'verification'
        description = 'Check code standard'


        source = ['OpenWIGLibrary/src']
        include '**/*.java'

        classpath = files()

        doNotTrackState("unreadable input property 'configDirectory'")
    }
    dependencies {
        // Android annotations
        implementation 'androidx.annotation:annotation:1.9.1'
    }
    testOptions {
        targetSdk 36
    }
}
dependencies {
    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'com.google.android.material:material:1.13.0'

    androidTestImplementation 'androidx.test.ext:junit:1.3.0'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'

    // Apache Commons
    implementation 'org.apache.commons:commons-collections4:4.5.0'

    // Junit only needed for local unit tests
    testImplementation 'junit:junit:4.13.2'

    // AssertJ for testing, needed both for local unit tests and Android instrumentation tests
    String assertJVersion = '3.27.7'
    testImplementation "org.assertj:assertj-core:$assertJVersion"
    androidTestImplementation "org.assertj:assertj-core:$assertJVersion"


}
